<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/content_layout"
        android:orientation="vertical"
        android:background="@android:color/background_light"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#bebebe" />

    <RadioGroup
        android:id="@+id/btn_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/btn_weixin"
            android:text="@string/btn_weixin"
            android:drawableTop="@drawable/tab_menu_weixin"
            style="@style/TabMenuWeixin"/>
        <RadioButton
            android:id="@+id/btn_address"
            android:text="@string/btn_address"
            android:drawableTop="@drawable/tab_menu_address"
            style="@style/TabMenuWeixin"/>
        <RadioButton
            android:id="@+id/btn_find"
            android:text="@string/btn_find"
            android:drawableTop="@drawable/tab_menu_find"
            style="@style/TabMenuWeixin"/>
        <RadioButton
            android:id="@+id/btn_me"
            android:text="@string/btn_me"
            android:drawableTop="@drawable/tab_menu_me"
            style="@style/TabMenuWeixin"/>
    </RadioGroup>
</LinearLayout>